fixed queue, commented all the header files, created the efficient mode, added a thread safe log for simple debugs

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -20,6 +20,9 @@ d dbg debug:
 ef effic efficient:
 	$(COMPILER) $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
 
+dbgef:
+	$(COMPILER) $(DEBUG) $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
+
 r rn run:
 	./$(PRGM)
 
