improved makefile simplicity and flexibility, rewrote the readme to match the changes

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -13,49 +13,53 @@ GDB=-g
 LIB=-lpthread
 VRS=-std=c++11
 FLAGS=$(WARNING) $(VRS)
-OUTPUT=runlog.txt
-DEBUG=-DDEBUG $(GDB)
-EFFIC=-DEFFICIENT
 
 PRGM=lab1
+NAME=$(PRGM)
 
-#standard compile
+#compile flags
+#turn on A for all flags
+ifdef A
+FLAGS+= -DDEBUG -DEFFICIENT -DCOMPARE
+#if not all check for individual flags
+else
+#degug flag
+ifdef D
+FLAGS+= -DDEBUG
+endif
+#efficient mode flag
+ifdef E
+FLAGS+= -DEFFICIENT
+endif
+#comparison mode flag
+ifdef C
+FLAGS+= -DCOMPARE
+endif
+endif
+
+#DEBUG add the g flag for GDB and prints out information from the
+#run, will be slower requires more thread safe structures
+
+#EFFICIENT has the main run an instance of the test therefore it
+#runs n-1 threads and has less creation overhead
+
+#COMPARE compares the result time from the threads with that of 
+#a bare minimum sequential test
+
+#run flags
+#turn on O for output piping to file
+ifdef O
+PIPE=> $(NAME)_runlog.txt
+endif
+
+#compile
 c ++ comp:
-	$(COMPILER) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
+	$(COMPILER) $(FLAGS) -o $(NAME) $(PRGM).cpp $(LIB)
 
-#turn on debug flags for informative messages upon certain errors
-d dbg debug:
-	$(COMPILER) $(DEBUG) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#turn on efficiency allows the process to also run the function requiring one less thread
-ef effic efficient:
-	$(COMPILER) $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#turn on both efficiency and debugging
-dbg_ef:
-	$(COMPILER) $(DEBUG) $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#compile a compare mode which gives stats of speedup between speedup and serial
-compare stats:
-	$(COMPILER) -DCOMPARE $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#compile a compare mode with efficiency
-compare_ef:
-	$(COMPILER) -DCOMPARE $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#compiles using debug efficiency and comparison
-#not advised as the debug will cause more slowdown for the threads
-everything every:
-	$(COMPILER) -DCOMPARE $(DEBUG) $(EFFIC) $(FLAGS) -o $(PRGM) $(PRGM).cpp $(LIB)
-
-#standard run
+#run
 r rn run:
-	./$(PRGM) $(n)
-
-#run and pipe the output to a file
-ex examine output out:
-	./$(PRGM) $(n) > $(OUTPUT)
+	./$(PRGM) $(n) $(PIPE)
 
 #delete the binary
 cl cln clean:
-	rm $(PRGM)
+	rm $(NAME)
