Finished most of implementation waiting for new version of httpreq, still need to comment and test with httperf

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -2,7 +2,7 @@
 #####################################################
 # Makefile											#
 # Author: Michael Laucella							#
-# Last Modified: 3/2/2017							#
+# Last Modified: 3/8/2017							#
 #													#
 # compiles and runs lab 2							#
 #####################################################
@@ -10,7 +10,7 @@
 COMPILER=g++
 WARNING=-Wall
 GDB=-g
-LIB=-lpthread
+LIB=-lpthread -lcrypto++
 VRS=-std=c++11
 FLAGS=$(WARNING) $(VRS)
 
@@ -18,33 +18,10 @@ PRGM=lab2
 NAME=$(PRGM)
 
 #compile flags
-#turn on A for all flags
-ifdef A
-FLAGS+= -DDEBUG -DEFFICIENT -DCOMPARE
-#if not all check for individual flags
-else
 #degug flag
 ifdef D
-FLAGS+= -DDEBUG
+FLAGS+= GDB
 endif
-#efficient mode flag
-ifdef E
-FLAGS+= -DEFFICIENT
-endif
-#comparison mode flag
-ifdef C
-FLAGS+= -DCOMPARE
-endif
-endif
-
-#DEBUG add the g flag for GDB and prints out information from the
-#run, will be slower requires more thread safe structures
-
-#EFFICIENT has the main run an instance of the test therefore it
-#runs n-1 threads and has less creation overhead
-
-#COMPARE compares the result time from the threads with that of 
-#a bare minimum sequential test
 
 #run flags
 #turn on O for output piping to file
@@ -54,11 +31,11 @@ endif
 
 #compile
 c ++ comp:
-	$(COMPILER) $(FLAGS) -o $(NAME) $(PRGM).cpp $(LIB)
+	$(COMPILER) $(FLAGS) -o $(NAME) network/*.cpp hashing/*.cpp httpreq/httpreq.cc httpreq/httpresp.cc threads/*.cpp $(PRGM).cpp $(LIB)
 
 #run
 r rn run:
-	./$(PRGM) $(n) $(PIPE)
+	./$(PRGM) $(n) $(p) $(PIPE)
 
 #delete the binary
 cl cln clean:
