--- a/lab2/.vscode/settings.json
+++ b/lab2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "functional": "cpp",
         "tuple": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "cstdio": "cpp"
     }
 }
